--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Brief demonstration of a React/Express app.",
   "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/app.js"
+    "test": "jest --detectOpenHandles",
+    "start": "node server/index.js"
   },
   "keywords": [
     "demo"
@@ -19,5 +19,9 @@
     "nconf": "^0.10.0",
     "pg": "^7.4.3",
     "sequelize": "^4.39.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "supertest": "^3.3.0"
   }
 }
