--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Brief demonstration of a React/Express app.",
   "main": "server/app.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest",
     "start": "node server/index.js"
   },
   "keywords": [
